FIX Allow buttons to retain their font size on small screens if they don't have an icon (#152)

--- a/client/src/components/Toolbar/Toolbar.scss
+++ b/client/src/components/Toolbar/Toolbar.scss
@@ -75,7 +75,10 @@
 
   @include media-breakpoint-down(sm) {
     .btn {
-      font-size: 0;
+      // Hide text on small devices if the button has an icon
+      &[class*="font-icon-"] {
+        font-size: 0;
+      }
 
       &:before {
         margin-right: 0;
